--- a/rf-dashboard/package.json
+++ b/rf-dashboard/package.json
@@ -22,6 +22,7 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.0.1",
+    "react-star-ratings": "^2.3.0",
     "react-toastify": "^6.0.5",
     "reactstrap": "^8.4.1",
     "styled-components": "^4.3.2"
