--- a/rf-backend/package.json
+++ b/rf-backend/package.json
@@ -25,8 +25,11 @@
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/validator": "^5.0.6",
+    "@adonisjs/websocket": "^1.0.12",
+    "adonis-pusher": "^1.0.4",
     "brazilian-values": "^0.7.5",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "pusher": "^3.0.1"
   },
   "devDependencies": {},
   "autoload": {
