--- a/rf-dashboard/package.json
+++ b/rf-dashboard/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@adonisjs/websocket-client": "^1.0.9",
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
@@ -13,6 +14,8 @@
     "immutability-helper": "^3.0.2",
     "moment": "^2.26.0",
     "node-sass": "^4.14.1",
+    "pusher-js": "^6.0.3",
+    "pushid": "^1.0.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.1",
     "react-dnd": "^9.3.2",
