--- a/rf-dashboard/package.json
+++ b/rf-dashboard/package.json
@@ -4,11 +4,15 @@
   "private": true,
   "dependencies": {
     "@adonisjs/websocket-client": "^1.0.9",
+    "@ag-grid-community/client-side-row-model": "^23.2.1",
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
+    "ag-grid-community": "^23.2.1",
+    "ag-grid-react": "^23.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "brazilian-values": "^0.7.5",
     "history": "^4.10.1",
     "immer": "^3.1.3",
     "immutability-helper": "^3.0.2",
