--- a/rf-dashboard/package.json
+++ b/rf-dashboard/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@adonisjs/websocket-client": "^1.0.9",
+    "@ag-grid-community/all-modules": "^23.2.1",
     "@ag-grid-community/client-side-row-model": "^23.2.1",
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
