--- a/rf-dashboard/package.json
+++ b/rf-dashboard/package.json
@@ -6,31 +6,47 @@
     "@adonisjs/websocket-client": "^1.0.9",
     "@ag-grid-community/all-modules": "^23.2.1",
     "@ag-grid-community/client-side-row-model": "^23.2.1",
+    "@date-io/core": "1.3.13",
+    "@date-io/date-fns": "1.3.13",
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.10.0",
     "ag-grid-community": "^23.2.1",
     "ag-grid-react": "^23.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "brazilian-values": "^0.7.5",
+    "date-fns": "^2.14.0",
+    "filesize": "^6.1.0",
+    "final-form": "^4.20.0",
+    "final-form-material-ui": "^0.3.0",
     "history": "^4.10.1",
     "immer": "^3.1.3",
     "immutability-helper": "^3.0.2",
+    "lodash": "^4.17.15",
     "moment": "^2.26.0",
+    "mui-rff": "^2.1.15",
     "node-sass": "^4.14.1",
     "pusher-js": "^6.0.3",
     "pushid": "^1.0.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.1",
+    "react-circular-progressbar": "^2.0.3",
+    "react-date-picker": "^8.0.1",
     "react-dnd": "^9.3.2",
     "react-dnd-html5-backend": "^9.3.2",
     "react-dom": "^16.8.6",
+    "react-dropzone": "^11.0.1",
+    "react-final-form": "^6.5.0",
+    "react-flexbox-grid": "^2.1.2",
     "react-icons": "^3.10.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.0.1",
     "react-star-ratings": "^2.3.0",
+    "react-text-mask": "^5.4.3",
     "react-toastify": "^6.0.5",
     "reactstrap": "^8.4.1",
     "styled-components": "^4.3.2"
