--- a/rf-dashboard/package.json
+++ b/rf-dashboard/package.json
@@ -28,6 +28,7 @@
     "immutability-helper": "^3.0.2",
     "lodash": "^4.17.15",
     "moment": "^2.26.0",
+    "moment-timer": "^1.3.0",
     "mui-rff": "^2.1.15",
     "node-sass": "^4.14.1",
     "pusher-js": "^6.0.3",
@@ -42,6 +43,7 @@
     "react-dom": "^16.8.6",
     "react-dropzone": "^11.0.1",
     "react-final-form": "^6.5.0",
+    "react-flatpickr": "^3.10.4",
     "react-flexbox-grid": "^2.1.2",
     "react-hook-form": "^6.0.7",
     "react-icons": "^3.10.0",
