--- a/rf-dashboard/package.json
+++ b/rf-dashboard/package.json
@@ -2,7 +2,7 @@
   "name": "rf-dashboard",
   "version": "1.0.0",
   "private": true,
-  "homepage": "http://31.220.50.222/rf",
+  "homepage": "https://retonofacil.com.br/rf",
   "dependencies": {
     "@adonisjs/websocket-client": "^1.0.9",
     "@ag-grid-community/all-modules": "^23.2.1",
@@ -14,6 +14,8 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.10.0",
+    "@unform/core": "^2.1.3",
+    "@unform/web": "^2.1.3",
     "ag-grid-community": "^23.2.1",
     "ag-grid-react": "^23.2.1",
     "axios": "^0.19.2",
@@ -54,10 +56,12 @@
     "react-text-mask": "^5.4.3",
     "react-toastify": "^6.0.5",
     "reactstrap": "^8.4.1",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "unform-material-ui": "^1.0.2",
+    "yup": "^0.29.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set HTTPS=true&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -76,5 +80,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-plugin-react": "^7.20.5"
   }
 }
