--- a/rf-dashboard/package.json
+++ b/rf-dashboard/package.json
@@ -53,6 +53,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.0.1",
     "react-star-ratings": "^2.3.0",
+    "react-styled-floating-label": "^0.1.3",
     "react-text-mask": "^5.4.3",
     "react-toastify": "^6.0.5",
     "reactstrap": "^8.4.1",
