--- a/rf-dashboard/package.json
+++ b/rf-dashboard/package.json
@@ -49,6 +49,7 @@
     "react-flexbox-grid": "^2.1.2",
     "react-hook-form": "^6.0.7",
     "react-icons": "^3.10.0",
+    "react-input-mask": "^2.0.4",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.0.1",
