--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,5 @@ rf-backend-bkp
 rf-backend/package-lock.json
 rf-dashboard/yarn.lock
 rf-dashboard/yarn.lock
+rf-dashboard-bkp
+rf-backend-bkp.rar
