--- a/rf-dashboard/package.json
+++ b/rf-dashboard/package.json
@@ -5,19 +5,24 @@
   "homepage": "https://retonofacil.com.br/rf",
   "dependencies": {
     "@adonisjs/websocket-client": "^1.0.9",
-    "@ag-grid-community/all-modules": "^23.2.1",
-    "@ag-grid-community/client-side-row-model": "^23.2.1",
+    "@ag-grid-community/all-modules": "^24.0.0",
+    "@ag-grid-community/client-side-row-model": "^24.0.0",
     "@date-io/core": "1.3.13",
     "@date-io/date-fns": "1.3.13",
-    "@material-ui/core": "^4.10.0",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.10.0",
+    "@types/jest": "^26.0.13",
+    "@types/node": "^14.10.1",
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-select": "^3.0.19",
     "@unform/core": "^2.1.3",
     "@unform/web": "^2.1.3",
-    "ag-grid-community": "^23.2.1",
-    "ag-grid-react": "^23.2.1",
+    "ag-grid-community": "^24.0.0",
+    "ag-grid-react": "^24.0.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "brazilian-values": "^0.7.5",
@@ -60,7 +65,8 @@
     "react-toastify": "^6.0.5",
     "reactstrap": "^8.4.1",
     "styled-components": "^4.3.2",
-    "unform-material-ui": "^1.0.2",
+    "typescript": "^4.0.2",
+    "unform-material-ui": "^1.0.3",
     "yup": "^0.29.3"
   },
   "scripts": {
