--- a/rf-dashboard/package.json
+++ b/rf-dashboard/package.json
@@ -14,7 +14,9 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.10.0",
+    "@react-google-maps/api": "^1.10.1",
     "@types/jest": "^26.0.13",
+    "@types/markerclustererplus": "^2.1.33",
     "@types/node": "^14.10.1",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
@@ -23,6 +25,7 @@
     "@unform/web": "^2.1.3",
     "ag-grid-community": "^24.0.0",
     "ag-grid-react": "^24.0.0",
+    "autonumeric": "^4.6.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "brazilian-values": "^0.7.5",
@@ -38,6 +41,7 @@
     "moment-timer": "^1.3.0",
     "mui-rff": "^2.1.15",
     "node-sass": "^4.14.1",
+    "prop-types": "^15.7.2",
     "pusher-js": "^6.0.3",
     "pushid": "^1.0.0",
     "react": "^16.8.6",
@@ -53,6 +57,7 @@
     "react-flatpickr": "^3.10.4",
     "react-flexbox-grid": "^2.1.2",
     "react-hook-form": "^6.0.7",
+    "react-hook-google-maps": "^0.0.3",
     "react-icons": "^3.10.0",
     "react-input-mask": "^2.0.4",
     "react-perfect-scrollbar": "^1.5.8",
@@ -67,9 +72,11 @@
     "styled-components": "^4.3.2",
     "typescript": "^4.0.2",
     "unform-material-ui": "^1.0.3",
+    "uuid": "^8.3.0",
     "yup": "^0.29.3"
   },
   "scripts": {
+    "dev": "react-scripts start",
     "start": "set HTTPS=true&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
