--- a/rf-dashboard/package.json
+++ b/rf-dashboard/package.json
@@ -34,6 +34,7 @@
     "filesize": "^6.1.0",
     "final-form": "^4.20.0",
     "final-form-material-ui": "^0.3.0",
+    "google-maps-api-loader": "^1.1.1",
     "history": "^4.10.1",
     "immer": "^3.1.3",
     "immutability-helper": "^3.0.2",
@@ -57,10 +58,12 @@
     "react-final-form": "^6.5.0",
     "react-flatpickr": "^3.10.4",
     "react-flexbox-grid": "^2.1.2",
+    "react-google-maps": "^9.4.5",
     "react-hook-form": "^6.0.7",
     "react-hook-google-maps": "^0.0.3",
     "react-icons": "^3.10.0",
     "react-input-mask": "^2.0.4",
+    "react-number-format": "^4.4.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.0.1",
