--- a/rf-dashboard/package.json
+++ b/rf-dashboard/package.json
@@ -74,6 +74,7 @@
     "react-toastify": "^6.0.5",
     "reactstrap": "^8.4.1",
     "styled-components": "^4.3.2",
+    "text-mask-addons": "^3.8.0",
     "typescript": "^4.0.2",
     "unform-material-ui": "^1.0.3",
     "uuid": "^8.3.0",
