--- a/rf-dashboard/package.json
+++ b/rf-dashboard/package.json
@@ -62,6 +62,7 @@
     "react-hook-form": "^6.0.7",
     "react-hook-google-maps": "^0.0.3",
     "react-icons": "^3.10.0",
+    "react-imask": "^6.0.5",
     "react-input-mask": "^2.0.4",
     "react-number-format": "^4.4.1",
     "react-perfect-scrollbar": "^1.5.8",
