--- a/rf-dashboard/package.json
+++ b/rf-dashboard/package.json
@@ -59,6 +59,7 @@
     "react-flatpickr": "^3.10.4",
     "react-flexbox-grid": "^2.1.2",
     "react-google-maps": "^9.4.5",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^6.0.7",
     "react-hook-google-maps": "^0.0.3",
     "react-icons": "^3.10.0",
