--- a/rf-dashboard/package.json
+++ b/rf-dashboard/package.json
@@ -43,6 +43,7 @@
     "moment-timer": "^1.3.0",
     "mui-rff": "^2.1.15",
     "node-sass": "^4.14.1",
+    "pdfmake": "^0.1.68",
     "prop-types": "^15.7.2",
     "pusher-js": "^6.0.3",
     "pushid": "^1.0.0",
