--- a/rf-dashboard/package.json
+++ b/rf-dashboard/package.json
@@ -9,6 +9,9 @@
     "@ag-grid-community/client-side-row-model": "^24.0.0",
     "@date-io/core": "1.3.13",
     "@date-io/date-fns": "1.3.13",
+    "@devexpress/dx-react-core": "^2.7.2",
+    "@devexpress/dx-react-scheduler": "^2.7.2",
+    "@devexpress/dx-react-scheduler-material-ui": "^2.7.2",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -56,6 +59,7 @@
     "react-dnd-html5-backend": "^9.3.2",
     "react-dom": "^16.8.6",
     "react-dropzone": "^11.0.1",
+    "react-email-editor": "^1.2.0",
     "react-final-form": "^6.5.0",
     "react-flatpickr": "^3.10.4",
     "react-flexbox-grid": "^2.1.2",
