--- a/rf-dashboard/package.json
+++ b/rf-dashboard/package.json
@@ -86,6 +86,7 @@
     "typescript": "^4.0.2",
     "unform-material-ui": "^1.0.3",
     "uuid": "^8.3.0",
+    "uuidv4": "^6.0.9",
     "yup": "^0.29.3"
   },
   "scripts": {
